[package]
name = "household-md"
version = "0.1.0"
description = "Household MD - A fast markdown editor and reader"
authors = ["you"]
edition = "2021"

[lib]
name = "household_md_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2.6.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = { version = "8.2.0", features = ["macos_kqueue"] }
